# c-data-structures

./: .gitignore  README.md  meson.build
.github/workflows/: meson.yml
include/: hash.h  linked_list.h  set.h  sort.h  vector.h
src/: hash.c  linked_list.c  set.c  sort.c  vector.c
tests/: hash_test.c  linked_list_test.c  set_test.c  sort_test.c  vector_test.c
